--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "lib/ds-test"]
 	path = lib/ds-test
-	url = https://github.com/dapphub/ds-test
+	url = https://github.com/velerofinance/ds-test
 [submodule "lib/ds-chief"]
 	path = lib/ds-chief
-	url = https://github.com/makerdao/ds-chief
+	url = https://github.com/velerofinance/ds-chief
